--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "Lua.workspace.library": [
-    "c:\\Users\\tiagolr\\.vscode\\extensions\\antoinebalaine.reascript-docs-0.1.2/resources/reaper-types.lua"
-  ]
+    "c:\\Users\\tiagolr\\.vscode\\extensions\\antoinebalaine.reascript-docs-0.1.8/resources/Sexan_reaper_defs.lua",
+    "c:\\Users\\tiagolr\\.vscode\\extensions\\antoinebalaine.reascript-docs-0.1.8/resources/imgui_defs_0.9.lua"
+  ],
+  "Lua.workspace.preloadFileSize": 1024,
+  "lua_analyzer.codeLinting.enable": false
 }
